# gemini-image-skill

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_CODE_SETUP.md  INSTALL.md  QUICKSTART.md  README.md  README_PORTABLE.md  SKILL.md  generate.bat  generate.sh  image-command.md  upscale.py
assets/styles/: amber_glass_3d.md  blue_glass_3d.md  emerald_glass_3d.md  gold_metallic_3d.md  gradient_holographic.md  minimalist_flat.md  neon_wireframe.md  purple_glass_3d.md
references/: api_capabilities.md  best_practices.md
scripts/: .env.example  main.py  pyproject.toml
