[project]
name = "google-image-gen-api-starter"
version = "0.1.0"
description = "Generate images using Google's Gemini API - a practical starter for coders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
image-gen = "main:main"

[tool.uv]
dev-dependencies = []
